[FIX][UX] Installer: fix contrast issues with the sidebar by using the same colors as the security precaution and installer disabled screens + center and use the light version of the logo

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -4964,7 +4964,7 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
       font-size: 0.8em; }
 
 #tiki-installer {
-  background-color: #aeaeae;
+  background-color: #48497A;
   /* re-style buttons to be link links */ }
   #tiki-installer .btn-link {
     border: none;
@@ -4977,6 +4977,9 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
   #tiki-installer .sidebar {
     margin: 1.5em 1.5em 0 0;
     padding-bottom: 2em; }
+  #tiki-installer .sidebar > img {
+    display: block;
+    margin: auto; }
   #tiki-installer .installer-content {
     background-color: white;
     min-height: 100vh;
@@ -4987,7 +4990,7 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
     bottom: 1em;
     right: 1em; }
   #tiki-installer .menus {
-    margin-top: 5em; }
+    margin-top: 3rem; }
     #tiki-installer .menus .menu {
       color: white;
       margin-top: 1em; }
@@ -5005,9 +5008,10 @@ h2:hover .heading-link, h3:hover .heading-link, h4:hover .heading-link, h5:hover
         padding: 0;
         background-color: transparent; }
       #tiki-installer .nav .nav-item.active {
-        color: blue; }
+        color: white; }
         #tiki-installer .nav .nav-item.active .nav-link {
-          color: blue; }
+          color: white;
+          font-weight: bold; }
   #tiki-installer .install-step8 .enter-tiki .btn {
     white-space: normal; }
 
