--- a/themes/base_files/scss/_tiki-installer.scss
+++ b/themes/base_files/scss/_tiki-installer.scss
@@ -1,5 +1,5 @@
 #tiki-installer {
-	background-color: #aeaeae;
+	background-color: #48497A;
 
 	/* re-style buttons to be link links */
 	.btn-link {
@@ -19,6 +19,11 @@
 		padding-bottom: 2em;
 	}
 
+	.sidebar > img {
+		display: block;
+		margin: auto;
+	}
+
 	.installer-content {
 		background-color: white;
 		min-height: 100vh;
@@ -33,7 +38,7 @@
 	}
 
 	.menus {
-		margin-top: 5em;
+		margin-top: 3rem;
 
 		.menu {
 			color: white;
@@ -60,9 +65,10 @@
 			}
 
 			&.active {
-				color: blue;
+				color: white;
 				.nav-link {
-					color: blue;
+					color: white;
+					font-weight: bold;
 				}
 			}
 		}
